2013-05-20  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php
	include/styles/pandora.css
	include/functions_visual_map.php
	include/functions_agents.php
	include/languages/util-bzr-update
	include/languages/util-generate-tarball
	include/languages/util-all
	include/languages/util-create-po
	include/languages/util-README
	include/languages/util-update-po
	include/languages/util-create-template
	include/languages/util-compile-mo
	include/constants.php
	operation/tree.php
	operation/visual_console/render_view.php
	operation/users/user_edit.php
	operation/events/events.build_table.php
	operation/events/events_list.php
	operation/events/events.php
	operation/agentes/status_monitor.php
	images/status_sets/faces/severity_warning_pixel.png
	images/status_sets/faces/agent_critical_ball.png
	images/status_sets/faces/severity_major_pixel.png
	images/status_sets/faces/module_warning_ball.png
	images/status_sets/faces/module_ok_ball.png
	images/status_sets/faces/agent_no_data_ball.png
	images/status_sets/faces/severity_minor_pixel.png
	images/status_sets/faces/agent_ok_ball.png
	images/status_sets/faces/severity_normal_pixel.png
	images/status_sets/faces/server_down_ball.png
	images/status_sets/faces/alert_not_fired_ball.png
	images/status_sets/faces/severity_informational_pixel.png
	images/status_sets/faces/agent_down_ball.png.png
	images/status_sets/faces/module_no_data_ball.png
	images/status_sets/faces/alert_fired_ball.png
	images/status_sets/faces/agent_warning_ball.png
	images/status_sets/faces/severity_maintenance_pixel.png
	images/status_sets/faces/agent_no_monitors_ball.png
	images/status_sets/faces/agent_down_ball.png
	images/status_sets/faces/severity_critical_pixel.png
	images/status_sets/faces/alert_disabled_ball.png
	images/status_sets/faces/module_critical_ball.png
	images/status_sets/faces/server_ok_ball.png
	images/status_sets/color_text/severity_informational.png
	images/status_sets/color_text/module_critical.png