@@ -285,7 +285,7 @@ function extensions_load_extensions ($extensions) {
 	
 	foreach ($extensions as $extension) {
 		$extension_file = $extension['file'];
-		require_once (realpath ($extension['dir']."/".$extension_file));
+		require_once (realpath ($extension['dir'] . "/" . $extension_file));
 	}
 }
 
