@@ -1,3 +1,13 @@
+2013-05-20 Miguel de Dios <miguel.dedios@artica.es>
+
+	* extensions/net_tools.php: added a entry to godmode for set the
+	paths of commands.
+	
+	Fixes: #2220
+	
+	* include/functions_config.php, include/functions_extensions.php:
+	cleaned source code style.
+
 2013-05-20  Sergio Martin <sergio.martin@artica.es>
 
 	* include/functions_html.php
